--- a/app/MemberModule/templates/Forum.category.latte
+++ b/app/MemberModule/templates/Forum.category.latte
@@ -9,7 +9,14 @@
 
 {control texylaJs}
 
-{*<script type="text/javascript" src="{$baseUrl}/js/jquery.are-you-sure.js"></script>*}
+<style type="text/css" n:syntax="off">
+	table#items .headerLike { border-radius: 0}
+	table#items .title { padding-left: 1em;}
+	table#items .author { padding: 0.5ex;}
+</style>
+
+
+	{*<script type="text/javascript" src="{$baseUrl}/js/jquery.are-you-sure.js"></script>*}
 <script type="text/javascript" src="{$basePath}/js/jquery.textarea_autosize.min.js"></script>
 
 <script type="text/javascript" n:nonce>
