--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -27,7 +27,7 @@
 
 			.card .square { padding: 1em 1em 2em 1.1em; }
 			.card .square table th, .square table td { padding: 0 1em; }
-			.card .blue { background-color: #12397e;}
+			.card .blue { background-color: #12397e; color: white;}
 			.card .red { background-color: #da251c; color: white;}
 			.card .yellow { background-color: #fac232; height: 0;}
 
