Forget to add css rules after forum redesign

--- a/app/MemberModule/templates/Forum.search.latte
+++ b/app/MemberModule/templates/Forum.search.latte
@@ -2,6 +2,12 @@
 <link rel="alternate" title="VZS Jablonec Forum" n:href="//Feed:forum" type="application/rss+xml">
 <link rel="stylesheet" href="{$basePath}/css/forum.css" type="text/css">
 <link rel="stylesheet" href="{$basePath}/css/forum.posts.css" type="text/css">
+
+<style type="text/css" n:syntax="off">
+	table#items .headerLike { border-radius: 0}
+	table#items .title { padding-left: 1em;}
+	table#items .author { padding: 0.5ex;}
+</style>
 {/block}
 
 <h1 n:block="title">Fórum</h1>
