--- a/app/MemberModule/templates/@layout.latte
+++ b/app/MemberModule/templates/@layout.latte
@@ -8,6 +8,7 @@
  *}
 
 {import '@svg.latte'}
+{import '@copy.latte'}
 
 {define mapy $place}
 	<sup><a href="https://mapy.cz/zakladni?q={$place|escapeurl}" target="_blank" title="Hledat na Mapy.cz">{include svg search}Mapy.cz</a></sup>
