--- a/app/MemberModule/templates/Ankety.view.latte
+++ b/app/MemberModule/templates/Ankety.view.latte
@@ -9,6 +9,7 @@
 	ol#members { margin-bottom: 1em;}
 </style>
 <script type="text/javascript" src="{$basePath}/js/confirm.js"></script>
+<script type="text/javascript" src="{$basePath}/js/copy.js"></script>
 {/block}
 
 <h1 n:block="title">Anketa</h1>
