--- a/app/MemberModule/templates/Forum.topic.latte
+++ b/app/MemberModule/templates/Forum.topic.latte
@@ -11,6 +11,7 @@
 {control texylaJs}
 
 <script type="text/javascript" src="{$baseUrl}/js/confirm.js"></script>
+<script type="text/javascript" src="{$baseUrl}/js/copy.js"></script>
 <script type="text/javascript" src="{$baseUrl}/js/jquery.textarea_autosize.min.js"></script>
 {*<script type="text/javascript" src="{$baseUrl}/js/jquery.are-you-sure.js"></script>*}
 
