--- a/app/MemberModule/templates/Forum.search.latte
+++ b/app/MemberModule/templates/Forum.search.latte
@@ -8,6 +8,8 @@
 	table#items .title { padding-left: 1em;}
 	table#items .author { padding: 0.5ex;}
 </style>
+
+<script type="text/javascript" src="{$baseUrl}/js/copy.js"></script>
 {/block}
 
 <h1 n:block="title">Fórum</h1>
