--- a/app/MemberModule/templates/Hlasovani.view.latte
+++ b/app/MemberModule/templates/Hlasovani.view.latte
@@ -15,6 +15,7 @@
 	h2 { margin-top: 1ex;}
 </style>
 <script type="text/javascript" src="{$basePath}/js/confirm.js"></script>
+<script type="text/javascript" src="{$basePath}/js/copy.js"></script>
 {/block}
 
 <h1 n:block="title">Hlasování představenstva</h1>
@@ -37,6 +38,7 @@
 <h2>{$anketa->title|firstUpper}</h2>
 
 <div id="otazka" class="texy">
+{include copy $anketa->text}
 {$anketa->text|texy|noescape}
 
 <p n:if="$anketa->date_add != $anketa->date_update" class="update"
