Little better formating of some messages

--- a/app/presenters/templates/Mail/akceConfirm.latte
+++ b/app/presenters/templates/Mail/akceConfirm.latte
@@ -2,12 +2,10 @@ Zdravím
 
 Na web byla přidána následující akce:
 
-**{$akce->name}**
+**{$akce->name} ($akce->date_start|datetime)**
 
-{$akce->perex}
+*{$akce->perex}*
 
-Tato akce není schválena a čeká na Vaše potvrzení.
-
-Akci najdete na adrese {link //:Member:Akce:view $akce->id}
+Tato akce není schválena a čeká na Vaše potvrzení. Akci najdete na adrese {link //:Member:Akce:view $akce->id}
 
 Prosím navštivte co nejdříve stránku akce, aby bylo možno se na akci přihlásit.
