--- a/app/presenters/templates/Mail/restorePassword.latte
+++ b/app/presenters/templates/Mail/restorePassword.latte
@@ -1,6 +1,6 @@
 Zdravím
 
-Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o obnovu hesla.
+**Ze stránek VZS Jablonec nad Nisou byla vytvořena žádost o obnovu hesla.**
 
 Můžete si ho nastavit na adrese: {link //:Account:Sign:restorePassword pubkey => $session->pubkey}
 
