--- a/app/presenters/templates/Mail/newMember.latte
+++ b/app/presenters/templates/Mail/newMember.latte
@@ -1,6 +1,6 @@
 ﻿Zdravím
 
-Právě si byl zaregistrován do systému VZS Jablonec nad Nisou.
+**Právě si byl zaregistrován do systému VZS Jablonec nad Nisou.**
 
 Svoje heslo si můžeš nastavit na adrese: {link //:Account:Sign:restorePassword pubkey => $session->pubkey}
  Tento odkaz bude fungovat 24 hodin (do {$session->date_end|datetime})
