--- a/app/MemberModule/templates/Akce.view.latte
+++ b/app/MemberModule/templates/Akce.view.latte
@@ -23,6 +23,7 @@
 
     textarea { min-height: 1em; box-sizing: border-box; padding: 1ex; }
 </style>
+<script type="text/javascript" src="{$baseUrl}/js/jquery.nette.js"></script>
 <script type="text/javascript" src="{$basePath}/js/nette.ajax.js"></script>
 <script type="text/javascript" src="{$basePath}/js/confirm.js"></script>
 <script type="text/javascript" src="{$basePath}/js/copy.js"></script>
