--- a/app/MemberModule/templates/Ankety.view.latte
+++ b/app/MemberModule/templates/Ankety.view.latte
@@ -8,6 +8,7 @@
 	ul#members { list-style-type: none; }
 	ol#members { margin-bottom: 1em;}
 </style>
+<script type="text/javascript" src="{$baseUrl}/js/jquery.nette.js"></script>
 <script type="text/javascript" src="{$basePath}/js/confirm.js"></script>
 <script type="text/javascript" src="{$basePath}/js/copy.js"></script>
 {/block}
