Add HTTPS adress

--- a/app/PhotoModule/templates/Album.view.latte
+++ b/app/PhotoModule/templates/Album.view.latte
@@ -38,7 +38,7 @@
 </div>
 
 <p n:if="$album->visible">
-	<a title="Sdílet na Facebook" href="http://www.facebook.com/sharer.php?u={link //this}"><img class="icon" src="{$baseUrl}/img/facebook.svg" alt="Facebook"></a>
+	<a title="Sdílet na Facebook" href="https://www.facebook.com/sharer.php?u={link //this}"><img class="icon" src="{$baseUrl}/img/facebook.svg" alt="Facebook"></a>
 	<a title="Sdílet na Google+" href="https://plus.google.com/share?url={link //this}"><img class="icon" src="{$baseUrl}/img/google+.svg" alt="Google+"></a>
 </p>
 
