Add send_to_second column

--- a/app/MemberModule/components/UserGridControlColumns.latte
+++ b/app/MemberModule/components/UserGridControlColumns.latte
@@ -52,6 +52,10 @@
 	{include col-yes-no}
 {/define}
 
+{define col-send_to_second}
+	{include col-yes-no}
+{/define}
+
 {define col-role}
 	<td class="right">
 		{$cell}
