--- a/app/MemberModule/templates/User.table.latte
+++ b/app/MemberModule/templates/User.table.latte
@@ -4,6 +4,7 @@
 		input.int { width: 2.7em}
 		.grid-global-actions { text-align: left;}
 		.grid table tr:nth-child(2n) td { background-color: #eee;}
+		#columnsForm { margin-top: 1em;}
 	</style>
 {/block}
 
