--- a/app/MemberModule/components/UserGridControl.latte
+++ b/app/MemberModule/components/UserGridControl.latte
@@ -1,3 +1,4 @@
+{snippet datadrid}
 {snippet flash}
 	<div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
 {/snippet}
@@ -7,3 +8,4 @@
 </table>
 
 {control grid}
+{/snippet}
