Disable ajax support because export cannot hadle ajax for now

--- a/app/MemberModule/templates/User.table.latte
+++ b/app/MemberModule/templates/User.table.latte
@@ -7,9 +7,8 @@
 		#columnsForm { margin-top: 1em;}
 	</style>
 
-	{*<script type="text/javascript" src="{$baseUrl}/js/jquery.nette.js"></script>*}
-	<script type="text/javascript" src="{$basePath}/js/nette.ajax.js"></script>
-	<script type="text/javascript" src="{$basePath}/js/nextras.datagrid.js"></script>
+	{*<script type="text/javascript" src="{$basePath}/js/nette.ajax.js"></script>*}
+	{*<script type="text/javascript" src="{$basePath}/js/nextras.datagrid.js"></script>*}
 
 {/block}
 
