Forget to remove nette ajax init

--- a/app/MemberModule/templates/User.table.latte
+++ b/app/MemberModule/templates/User.table.latte
@@ -19,7 +19,7 @@
 	{control userGrid}
 
 	<script type="text/javascript" defer n:nonce>
-		$.nette.init();
+		//$.nette.init();
 
 		document.querySelector('#selectAll').addEventListener('click', function (event) {
 			document.querySelectorAll('.grid input[type="checkbox"][name^="actions[items]"]').forEach(function (el) {
