Thanks to tmw\fpdm libraly is possilbe to fill in user pdf registration form and allow some users to download it pre-filed

--- a/app/MemberModule/templates/User.view.latte
+++ b/app/MemberModule/templates/User.view.latte
@@ -153,7 +153,10 @@
 		</address>
 	{/if}
 
-	<p n:if="($user->isInRole('member'))"><a n:href="vcf $member->id" class="buttonLike">{include svg address-card-o} stáhnout vizitku</a></p>
+	<p n:if="$user->isInRole('member')">
+		<a n:if="$user->isInRole('board')" n:href="registrationForm $member->id" class="buttonLike">{include svg file-pdf-o} stáhnout formulář</a>
+		<a n:href="vcf $member->id" class="buttonLike">{include svg address-card-o} stáhnout vizitku</a>
+	</p>
 
 	<div id="poznamka">
 		{$member->text|noescape|texy}
