--- a/www/subdom/member/css/member-symbols.css
+++ b/www/subdom/member/css/member-symbols.css
@@ -51,6 +51,10 @@ Single-colored icons can be modified like so:
   width: 0.8571428571428571em;
 }
 
+.icon-file-pdf-o {
+  width: 0.8571428571428571em;
+}
+
 .icon-clock-o {
   width: 0.8571428571428571em;
 }
