Add pre-filled registration pdf form to user activation email

--- a/app/presenters/templates/Mail/newMember.latte
+++ b/app/presenters/templates/Mail/newMember.latte
@@ -9,3 +9,5 @@ Svůj profil najdeš na adrese: {link //:Member:User:profile}
  Zde si upravit své osobní údaje.
 
 Vstup na stránky pro členy: {link //:Member:Akce:default}
+
+V příloze najdeš **převyplněný registrační formulář**. Pokud si ho ještě neodevzdal, prosíme zkontrolovat příslušné údaje, opravit nebo doplnit příslušné informace, vytisknout, podepsat a ideálně donést na trénink.
