--- a/app/presenters/templates/Mail/akceConfirm.latte
+++ b/app/presenters/templates/Mail/akceConfirm.latte
@@ -2,7 +2,7 @@ Zdravím
 
 Na web byla přidána následující akce:
 
-**{$akce->name} ($akce->date_start|datetime)**
+**{$akce->name} ({$akce->date_start|datetime})**
 
 *{$akce->perex}*
 
