--- a/app/MemberModule/templates/Akce.view.latte
+++ b/app/MemberModule/templates/Akce.view.latte
@@ -85,7 +85,7 @@
     <p n:if="$akce->price">{include svg dollar}{$akce->price} Kč</p>
 
 <p n:if="(!$akceIsOld) and ($akce->date_add != $akce->date_update)" 
-        class="update" title="{$akce->date_update|timeAgoInWords}">Upraveno <time datetime="{$akce->date_update|datetimeC}">{$akce->date_update|datetime}</time></p>
+        class="update" title="{$akce->date_update|timeAgoInWords}"><a n:tag-if="$revision" n:href="compare $revision->id">Upraveno <time datetime="{$akce->date_update|datetimeC}">{$akce->date_update|datetime}</time></a></p>
 
 {if $akce->perex}
     <h3>Stručný popis akce</h3>
