--- a/app/MemberModule/templates/Akce.view.latte
+++ b/app/MemberModule/templates/Akce.view.latte
@@ -22,6 +22,8 @@
     hr { border: none; border-top: 1px solid #ccc; }
 
     textarea { min-height: 1em; box-sizing: border-box; padding: 1ex; }
+
+    .update a { color: inherit }
 </style>
 <script type="text/javascript" src="{$baseUrl}/js/jquery.nette.js"></script>
 <script type="text/javascript" src="{$basePath}/js/nette.ajax.js"></script>
