No line breaking titles when right side menu is presents

--- a/app/MemberModule/templates/Akce.compare.latte
+++ b/app/MemberModule/templates/Akce.compare.latte
@@ -1,6 +1,7 @@
 {block #head}
 	<style type="text/css">
-		.right { margin-top: 1em; }
+		#text > h2 { display: inline-block; white-space: nowrap; margin-bottom: 0;}
+		.float-right { margin-top: 1ex; }
 		label { font-weight: bold; }
 		ins { background-color: lightgreen;}
 		del { background-color: lightcoral;}
