--- a/app/MemberModule/templates/Akce.revision.latte
+++ b/app/MemberModule/templates/Akce.revision.latte
@@ -8,7 +8,7 @@
 
 **Místo:** {$akce->place}
 
-**Zodpovědná osoba:** {$akce->user->surname} {$akce->user->name}
+**Autor:** {$akce->created_by->surname} {$akce->created_by->name}
 
 {if $akce->price}**Cena:** {$akce->price} Kč{/if}
 
